modal spill-over fix
fixes issue where modal content was spilling over its parent container

--- a/style.scss
+++ b/style.scss
@@ -348,9 +348,9 @@ footer span {
 }
 
 .modal-content .sample {
-  height: 100%;
+  height: auto;
   max-height: 305px;
-  width: 70%;
+  width: 80%;
   margin-bottom: 1rem;
 }
 
